fixed overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -344,3 +344,13 @@ footer a:hover, a:active {
         margin-left: 10%;
     }
 }
+
+/* --- Mobile Styles --- */
+
+@media only screen and (min-width: 320px) {
+    footer ol {
+        font-size: 16px;
+        flex-wrap: wrap;
+    }
+
+}
